objects/dfsle__BulkStatus__c.object
<CustomObject>
    <description>DocuSign Bulk Send Status</description>
    <fields>
        <fullName>dfsle__BatchSize__c</fullName>
        <label>Batch size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__DocuSignId__c</fullName>
        <externalId>true</externalId>
        <label>DocuSign batch ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__FailedEnvelopes__c</fullName>
        <label>Failed envelopes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__LastStatusUpdate__c</fullName>
        <label>Last Status Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__QueuedEnvelopes__c</fullName>
        <label>Queued envelopes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SentEnvelopes__c</fullName>
        <label>Sent envelopes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <label>Salesforce source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Submitted__c</fullName>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <label>DocuSign Bulk Send Status</label>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Bulk Send Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>